@@ -11,6 +11,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+- - - - - 3.3.2 - [27-02-2018] - - - - - - - - - - - - - - - - - - - -
+^ Standard-Anzeige Rangliste/Tabelle entspr. Ligaparameter
+
 - - - - - 3.3.1 - [13-09-2016] - - - - - - - - - - - - - - - - - - - -
 + Einbau alternative ItemID
 
